# SenseFoundry

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Cargo.toml  README.md  compose.yaml  pyproject.toml  技术路线.md
.github/workflows/: ci.yml
.omo/evidence/: F2-unwrap-fix.txt  F4-corpus-expanded.txt  task-14-audit-rebuild.txt  task-24-sense-discovery.txt  task-25-diachronic-analysis.txt  task-26-llm-gateway.txt  task-27-definition-drafting.txt  task-28-example-ranking.txt  task-29-review.txt  task-30-publication.txt  task-31-sync.txt  task-32-frontend-auth.txt  task-33-frontend-cards-clusters.txt  task-34-frontend-definition-publication.txt  task-35-android-search-detail.txt  task-36-android-room-sync.txt  task-37-android-submit-settings-accessibility.txt  task-8-identity-rebuild.txt
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/: README.md
android/app/schemas/com.sensefoundry.data.db.SenseDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sensefoundry/: MainActivity.kt
android/app/src/main/java/com/sensefoundry/data/db/: SenseDatabase.kt
android/app/src/main/java/com/sensefoundry/data/sync/: SyncProtocol.kt  SyncWorker.kt
android/app/src/main/java/com/sensefoundry/ui/components/: AppComponents.kt
android/app/src/main/java/com/sensefoundry/ui/detail/: SenseDetailScreen.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-v27/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: Dockerfile
backend/api_server/: Cargo.toml
backend/api_server/src/: lib.rs  main.rs
backend/api_server/src/tests/: mod.rs
backend/audit/: Cargo.toml
backend/audit/src/: lib.rs  routes.rs  service.rs
backend/audit/src/tests/: mod.rs
backend/card_management/: Cargo.toml
backend/card_management/src/: card.rs  lib.rs  routes.rs  service.rs
backend/card_management/src/tests/: mod.rs
backend/corpus_ingestion/: Cargo.toml
backend/corpus_ingestion/src/: lib.rs  routes.rs  service.rs  validator.rs
backend/corpus_ingestion/src/tests/: mod.rs
backend/definition_drafting/: Cargo.toml
backend/definition_drafting/src/: lib.rs  routes.rs  service.rs
backend/diachronic_analysis/: Cargo.toml
backend/diachronic_analysis/src/: lib.rs  routes.rs  service.rs
backend/dictionary_import/: Cargo.toml
backend/dictionary_import/src/: isolation.rs  lib.rs  routes.rs  service.rs
backend/dictionary_import/src/tests/: mod.rs
backend/example_ranking/: Cargo.toml
backend/example_ranking/src/: lib.rs  routes.rs  service.rs
backend/identity/: Cargo.toml
backend/identity/src/: lib.rs  middleware.rs  oidc.rs  rbac.rs  routes.rs
backend/identity/src/tests/: mod.rs
backend/job_queue/: Cargo.toml
backend/job_queue/src/: lib.rs  queue.rs  state_machine.rs  worker.rs
backend/job_queue/src/tests/: mod.rs
backend/kernel/: Cargo.toml
backend/kernel/src/: audit.rs  error.rs  etag.rs  events.rs  idempotency.rs  lib.rs  otel.rs  pagination.rs
backend/kernel/src/tests/: mod.rs
backend/model_registry/: Cargo.toml
backend/model_registry/src/: lib.rs  routes.rs  service.rs  version_binding.rs
backend/model_registry/src/tests/: mod.rs
backend/publication/: Cargo.toml
backend/publication/src/: lib.rs  routes.rs  service.rs
backend/review/: Cargo.toml
backend/review/src/: lib.rs  routes.rs  service.rs
backend/search/: Cargo.toml
backend/search/src/: hybrid.rs  lib.rs  opensearch.rs  routes.rs  vector_search.rs
backend/search/src/tests/: mod.rs
backend/sense_discovery/: Cargo.toml
backend/sense_discovery/src/: candidate.rs  lib.rs  orchestrator.rs  routes.rs
backend/sense_matching/: Cargo.toml
backend/sense_matching/src/: lib.rs  matcher.rs  routes.rs  unknown_pool.rs
backend/sense_matching/src/tests/: mod.rs
backend/source_verification/: Cargo.toml
backend/source_verification/src/: copyright.rs  lib.rs  routes.rs  service.rs
backend/source_verification/src/tests/: mod.rs
backend/sync/: Cargo.toml
backend/sync/src/: lib.rs  routes.rs  service.rs
backend/text_processing/: Cargo.toml
backend/text_processing/src/: lib.rs  normalizer.rs  quality.rs  routes.rs  sentence_splitter.rs  span_extractor.rs
backend/text_processing/src/tests/: mod.rs
corpus-tools/: README.md  fallback_corpus.py  ingest.py  requirements.txt  scraper.py  seed_senses.py
corpus-tools/data/fallback/: da.jsonl  fa.jsonl  kai.jsonl  shang.jsonl  xia.jsonl
corpus-tools/tests/: test_ingest.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: api.ts  auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/cards/: +page.svelte
frontend/src/routes/clusters/: +page.svelte
frontend/src/routes/definitions/: +page.svelte
frontend/src/routes/publish/: +page.svelte
inference/: .dockerignore  Dockerfile  requirements.txt
inference/app/: __init__.py  clustering.py  config.py  embedding.py  main.py  models.py  span_pooling.py
inference/app/routers/: __init__.py  cluster.py  embed.py  health.py  mlm.py  models.py  rerank.py  stability.py
inference/tests/: test_cluster.py  test_config.py  test_embed.py  test_health.py  test_mlm.py  test_rerank.py  test_stability.py
infra/keycloak/: realm.json
infra/minio/: init.sh
infra/opensearch/: opensearch.yml
infra/postgres/: init.sql
llm-gateway/: Dockerfile  requirements.txt
llm-gateway/app/: gateway.py  main.py
llm-gateway/tests/: test_gateway.py
migrations/: V001__initial_schema.sql  V002__audit_triggers.sql  V003__indexes.sql  V004__source_verification.sql  V005__corpus_ingestion_rejections.sql  V006__model_registry_versions.sql
openapi/: backend.openapi.yaml  inference.openapi.yaml  llm-gateway.openapi.yaml
scripts/: doppler-compose.ps1  verify-ai-services.ps1  verify-doppler-env.ps1  verify-publication-sync.ps1  verify-sync-signature.py
(+5 files in other folders)
