[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["inference*"]

[project]
name = "sensefoundry-inference"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "transformers>=4.40",
    "torch>=2.2",
    "hdbscan>=0.8",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
