[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["inference*"]

[project]
name = "sensefoundry-inference"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "transformers==4.52.4",
    "torch==2.7.1",
    "hdbscan==0.8.40",
    "scikit-learn==1.6.1",
    "numpy==2.2.6",
    "httpx==0.28.1",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]
