[package]
name = "corpus_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.10"
hex = "0.4"
mime = "0.3"
