[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.4"
http = "1.0"

[dev-dependencies]
tokio = { workspace = true }
