[package]
name = "job_queue"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
