[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
sha2 = "0.10"
hex = "0.4"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
http = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tokio = { workspace = true }

[lib]
name = "kernel"
path = "src/lib.rs"
