[package]
name = "sense_discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
job_queue = { path = "../job_queue" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
